<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/facebook"
            android:icon="@drawable/facebook"
            android:title="@string/facebook" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/wsp"
            android:title="@string/menu_enviar_mensaje" />
    </group>
        <item android:title="Otros">

        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/btn_star"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
        </item>
</menu>